Add request method constant.