@@ -6,8 +6,8 @@ import org.jboss.pnc.api.constants.HttpHeaders;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.util.HashSet;
 import java.util.Set;
 
@@ -16,13 +16,13 @@ class RequestSerializationTest {
     ObjectMapper objectMapper = new ObjectMapper();
 
     @Test
-    public void shouldDeserializeRequest() throws MalformedURLException, JsonProcessingException {
+    public void shouldDeserializeRequest() throws JsonProcessingException, URISyntaxException {
         Set<Request.Header> headers = new HashSet<>();
         headers.add(new Request.Header(HttpHeaders.AUTHORIZATION_STRING, "Bearer 12345"));
-        Request request = new Request("GET", new URL("http://localhost/"), headers);
+        Request request = new Request(Request.Method.GET, new URI("http://localhost/"), headers);
         String serialized = objectMapper.writeValueAsString(request);
 
         Request deserialized = objectMapper.readValue(serialized, Request.class);
-        Assertions.assertEquals("GET", deserialized.getMethod());
+        Assertions.assertEquals(Request.Method.GET, deserialized.getMethod());
     }
 }
